# wordle-solver

./: .gitignore  Makefile  README.md  data.json  pyproject.toml
.github/workflows/: python-package.yml
htmlcov/: class_index.html  d_145eef247bfb46b6_letter_py.html  d_145eef247bfb46b6_main_py.html  d_145eef247bfb46b6_solver_py.html  d_145eef247bfb46b6_words_loader_py.html  function_index.html  index.html  status.json  z_145eef247bfb46b6_letter_py.html  z_145eef247bfb46b6_solver_py.html  z_145eef247bfb46b6_words_loader_py.html
src/: app.py  bot.py  cli.py  cli_app.py  letter.py  main.py  solver.py  words_loader.py
tests/: test_solver.py
words/: ru.txt
