[project]
name = "wordle-solver"
version = "0.1.0"
description = "script for solving wordle puzzle"
authors = [
    { name = "oriontvv", email = "taranov.vv@gmail.com" }
]
license = "LGPL-3.0+"
readme = "README.md"
requires-python = ">=3.12"
homepage = "https://github.com/oriontvv/wordle-solver"
repository = "https://github.com/oriontvv/wordle-solver"
documentation = "https://github.com/oriontvv/wordle-solver"
dependencies = [
    "expiring-dict>=1.1.1",
    "python-dotenv>=1.0.1",
    "python-telegram-bot>=21.9",
]

[project.scripts]
wordle-solver = "wordle_solver:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-deadfixtures>=2.2.1",
    "ruff>=0.8.4",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
ignore = ["T201", "I001"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.mypy]
ignore_missing_imports = true

[tool.pytest]
addopts = "--ignore=py3 --ignore=build"

[tool.coverage.run]
relative_files = true
omit = [
    "src/main.py",
    "src/bot.py",
    "src/cli_app.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]
